[package]
name = "xresloader-protocol"
version = "2.1.3"
authors = ["owent <admin@owent.net>"]
license = "MIT"
description = "A tool to dump human readable text from binary output of xresloader"
homepage = "http://xresloader.atframe.work/"
repository = "https://github.com/xresloader/xresloader-dump-bin"
documentation = "http://xresloader.atframe.work/"
keywords = ["xresloader"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#proc-macro = true
bench = false  # It's nightly now
harness = true

[dependencies]
protobuf = { version = "3", features = ["with-bytes"] }
bytes = { version = "1" }


[build-dependencies]
log = "0.*"
env_logger = "0.*"
protobuf-codegen = { version = "3" }
protoc-bin-vendored = { version = "3" }
